--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -44,6 +44,12 @@ window#waybar {
   transition-duration: 120ms;
 }
 
+#network:hover {
+  background-image: linear-gradient(to bottom, #ac82e9 100%);
+  color: #141216;
+  transition-duration: 120ms;
+}
+
 #custom-applauncher {
   font-weight: bold;
   transition-duration: 120ms;
