--- a/config/waybar/style1.css
+++ b/config/waybar/style1.css
@@ -2,7 +2,7 @@
   /* General taskbar font, I like maple mono ^-^*/
   font-family: "Maple Mono";
   border-radius: 8;
-  font-size: 14px;
+  font-size: 18px; /*14 for desktop, it higher for thinkpad*/
   padding: 0px;
   background: transparent;
 }
@@ -17,7 +17,9 @@ window#waybar {
 #battery,
 #network,
 #tray,
-#pulseaudio {
+#pulseaudio,
+#bluetooth,
+#power-profiles-daemon {
   background-image: linear-gradient(to bottom, #141216 100%);
 
   margin: 6px;
@@ -38,11 +40,15 @@ window#waybar {
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
 }
-#pulseaudio {
+#bluetooth {
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
 }
 #battery {
+  border-radius: 8px;
+  margin-left: 6px;
+}
+#power-profiles-daemon {
   border-radius: 8px;
   margin-left: 6px;
 }
@@ -87,12 +93,9 @@ window#waybar {
   transition-duration: 120ms;
 }
 
-#pulseaudio:hover {
-  background-image: linear-gradient(to bottom, #ac82e9 100%);
-  color: #141216;
-  transition-duration: 120ms;
-}
-#network:hover {
+#pulseaudio:hover,
+#network:hover,
+#bluetooth:hover {
   background-image: linear-gradient(to bottom, #ac82e9 100%);
   color: #141216;
   transition-duration: 120ms;
@@ -156,11 +159,11 @@ window#waybar {
 
 #battery {
   background-color: #222222;
-  color: #1d2021;
+  color: #d8cab8;
 }
 #battery.warning,
 #battery.critical,
 #battery.urgent {
-  color: #1d2021;
+  color: #d8cab8;
   background-color: #fc4649;
 }
